# genshin_artifact

./: .browserslistrc  .env.development.yaml  .env.github_page.yaml  .env.production.yaml  .env.tauri.yaml  .eslintrc.js  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  README_en.md  README_ja.md  add_target_func.md  babel.config.js  build.js  inspect.js  jsconfig.json  netlify.toml  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vue.config.js
mona/: .gitignore  Cargo.toml  askama.toml
mona/src/: lib.rs  main.rs
mona/src/applications/: common.rs  mod.rs
mona/src/artifacts/: artifact.rs  eff.rs  effect.rs  effect_config.rs  mod.rs
mona/src/attribute/: attribute.rs  attribute_name.rs  attribute_no_reactive.rs  attribute_no_specific.rs  attribute_utils.rs  complicated_attribute_graph.rs  edge_priority.rs  entry.rs  mod.rs  simple_attribute_graph.rs  simple_attribute_graph2.rs  typing.rs
mona/src/buffs/: buff.rs  buff_config.rs  buff_meta.rs  buff_name.rs  buff_type.rs  mod.rs
mona/src/character/: character.rs  character_common_data.rs  character_config.rs  character_name.rs  character_static_data.rs  character_sub_stat.rs  mod.rs  no_effect.rs  prelude.rs  skill_config.rs  traits.rs
mona/src/common/: change_attribute.rs  code_escape.rs  damage_result.rs  element.rs  item_config_type.rs  max_trait.rs  mod.rs  reaction_type.rs  roles.rs  stat.rs  weapon_type.rs
mona/src/damage/: complicated_damage_builder.rs  damage_analysis.rs  damage_builder.rs  damage_context.rs  damage_result.rs  mod.rs  simple_damage_builder.rs  transformative_damage.rs
mona/src/enemies/: enemy.rs  mod.rs
mona/src/gen_meta/: gen_artifact_meta.rs  gen_buff_meta.rs  gen_character_meta.rs  gen_pf_meta.rs  gen_tf_meta.rs  gen_weapon_meta.rs
mona/src/potential_function/: mod.rs  potential_function.rs  potential_function_config.rs  potential_function_engine.rs  potential_function_name.rs
mona/src/target_functions/: mod.rs  target_function.rs  target_function_config.rs  target_function_meta.rs  target_function_name.rs  target_function_opt_config.rs  target_function_utils.rs
mona/src/team/: common_team.rs  mod.rs  team.rs  team_name.rs
mona/src/team_target/: mod.rs  team_preset.rs  team_target_function.rs
mona/src/utils/: mod.rs
mona/src/weapon/: mod.rs  weapon.rs  weapon_base_atk.rs  weapon_common_data.rs  (+7 more)
mona/templates/: artifact_meta_template.js  buff_meta_template.js  character_meta_template.js  pf_meta_template.js  tf_meta_template.js  weapon_meta_template.js
mona_core/: Cargo.toml
mona_core/src/: lib.rs  mona.pest
mona_dsl/: Cargo.toml
mona_dsl/source/: test.mona
mona_dsl/src/: lib.rs  mona.pest
mona_generate/: .gitignore  Cargo.toml  askama.toml  mona_generate_config.yaml
mona_generate/output/: _gen_artifact.js  _gen_buff.js  _gen_character.js  _gen_tf.js  _gen_weapon.js
mona_generate/src/: lib.rs
mona_generate/templates/: artifact_meta_template.js  buff_meta_template.js  character_meta_template.js  pf_meta_template.js  tf_meta_template.js  weapon_meta_template.js
(+3037 files in other folders)
