[package]
name = "mona_dsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
strum = "0.24"
strum_macros = "0.24"
smallvec = "1.8.0"
mona = { path = "../mona_core" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.78"
lazy_static = "1.4.0"
