[package]
name = "mona_generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 3
strip = true

[dependencies]
mona = { path = "../mona_core" }
lazy_static = "1.4.0"
rand = "0.8.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.78"
num = "0.4"
num-derive = "0.4.2"
num-traits = "0.2"
smallvec = "1.8.0"
askama = "0.11"
askama_escape = "0.10.2"
strum = "0.26"
strum_macros = "0.26"
rustc-hash = "1.1.0"
clap = { version = "3.1.18", features = ["derive"] }
edit-distance = "2.1.0"
serde_yaml = "0.8"
regex = { version = "1.5.6", features = ["pattern"] }
